# gemini-commander

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  IMPLEMENTATION_NOTES.md  README.md  TODO.md  install-icon.sh  meson.build
cmake/: GenerateGitVersion.cmake
install/: README.md  build-in-container.sh
install/deb/: build-deb.sh
install/deb-qt5/: build-deb-qt5.sh
install/deb-qt5/debian/: changelog  control  gemini-commander.install  rules
install/deb/debian/: changelog  control  copyright  rules
install/docker/: Dockerfile.debian-sid  Dockerfile.ubuntu22.04  Dockerfile.ubuntu24.04  Dockerfile.ubuntu24.10  Dockerfile.ubuntu25.10
install/logs/: .gitignore
install/output/: .gitignore
res/: gemini-commander.desktop  resources.qrc
res/config/: keys.toml
src/: Archives.cpp  Archives.h  ChmodDialog.cpp  ChmodDialog.h  Config.cpp  Config.h  ConfigDialog.cpp  ConfigDialog.h  DirectoryFirstProxyModel.cpp  DirectoryFirstProxyModel.h  DistroInfo.cpp  DistroInfo.h  DistroInfoDialog.cpp  DistroInfoDialog.h  FileIconResolver.cpp  FileIconResolver.h  FileOperationProgressDialog.cpp  FileOperationProgressDialog.h  FileOperations.cpp  FileOperations.h  FilePaneWidget.cpp  FilePaneWidget.h  FilePanel.cpp  FilePanel.h  FilePanel_decl.inc  FilePanel_impl.inc  FunctionBar.cpp  FunctionBar.h  KeyMap.cpp  KeyMap.h  MainWindow.cpp  MainWindow.h  MainWindow_decl.inc  MainWindow_impl.inc  MultiRenameDialog.cpp  MultiRenameDialog.h  PackDialog.cpp  PackDialog.h  Panel.cpp  Panel.h  (+27 more)
src/editor/: BaseViewer.cpp  BaseViewer.h  EditorFrame.cpp  EditorFrame.h  EditorFrame_decl.inc  EditorFrame_impl.inc  HexViewWidget.cpp  HexViewWidget.h  Viewer.cpp  Viewer.h  ViewerFrame.cpp  ViewerFrame.h  ViewerWidget.cpp  ViewerWidget.h  Viewer_decl.inc  Viewer_impl.inc  editor.cpp  editor.h  mainheader.cpp  mainheader.h
src/keys/: KeyMap.cpp  KeyMap.h  KeyRouter.cpp  KeyRouter.h  ObjectRegistry.cpp  ObjectRegistry.h
src/mounts/: ProcMountsManager.cpp  ProcMountsManager.h
src/udisks/: UDisksDeviceManager.cpp  UDisksDeviceManager.h
src/utils/: Ev.cpp
src/widgets/: Ev.h  SizeCalculationWidget.cpp  SizeCalculationWidget.h  mrutabwidget.cpp  mrutabwidget.h
tests/: CMakeLists.txt  create_symlink.sh  test_SizeFormat.cpp  test_file_hash.cpp
tests/data/: avail_hashes.json
tools/: stub_generator.cpp  toml_json_converter.cpp
tools/mime/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  SearchDialog.cpp  SearchDialog.h  main.cpp
